@@ -26,15 +26,14 @@ package org.sosy_lab.cpachecker.cpa.slicing;
 import com.google.common.base.Predicates;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Iterables;
-import com.google.common.collect.Lists;
 import com.google.common.collect.Sets;
-import java.io.PrintStream;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
+import org.sosy_lab.common.ShutdownNotifier;
 import org.sosy_lab.common.configuration.Configuration;
 import org.sosy_lab.common.configuration.InvalidConfigurationException;
 import org.sosy_lab.common.configuration.Option;
@@ -44,7 +43,6 @@ import org.sosy_lab.cpachecker.cfa.CFA;
 import org.sosy_lab.cpachecker.cfa.model.CFAEdge;
 import org.sosy_lab.cpachecker.cfa.model.CFANode;
 import org.sosy_lab.cpachecker.cfa.model.c.CAssumeEdge;
-import org.sosy_lab.cpachecker.core.CPAcheckerResult.Result;
 import org.sosy_lab.cpachecker.core.counterexample.CounterexampleInfo;
 import org.sosy_lab.cpachecker.core.interfaces.AbstractState;
 import org.sosy_lab.cpachecker.core.interfaces.ConfigurableProgramAnalysis;
@@ -56,7 +54,6 @@ import org.sosy_lab.cpachecker.core.interfaces.StatisticsProvider;
 import org.sosy_lab.cpachecker.core.interfaces.TransferRelation;
 import org.sosy_lab.cpachecker.core.interfaces.WrapperPrecision;
 import org.sosy_lab.cpachecker.core.reachedset.ReachedSet;
-import org.sosy_lab.cpachecker.core.reachedset.UnmodifiableReachedSet;
 import org.sosy_lab.cpachecker.cpa.arg.ARGCPA;
 import org.sosy_lab.cpachecker.cpa.arg.ARGReachedSet;
 import org.sosy_lab.cpachecker.cpa.arg.ARGState;
@@ -74,13 +71,9 @@ import org.sosy_lab.cpachecker.util.CFAUtils;
 import org.sosy_lab.cpachecker.util.CPAs;
 import org.sosy_lab.cpachecker.util.Pair;
 import org.sosy_lab.cpachecker.util.Precisions;
-import org.sosy_lab.cpachecker.util.dependencegraph.DependenceGraph;
-import org.sosy_lab.cpachecker.util.dependencegraph.DependenceGraph.TraversalDirection;
 import org.sosy_lab.cpachecker.util.refinement.PathExtractor;
-import org.sosy_lab.cpachecker.util.statistics.StatInt;
-import org.sosy_lab.cpachecker.util.statistics.StatKind;
-import org.sosy_lab.cpachecker.util.statistics.StatTimer;
-import org.sosy_lab.cpachecker.util.statistics.StatisticsWriter;
+import org.sosy_lab.cpachecker.util.slicing.Slicer;
+import org.sosy_lab.cpachecker.util.slicing.StaticSlicer;
 
 /**
  * Refiner for {@link SlicingPrecision}. Precision refinement is done through program slicing [1].
@@ -104,15 +97,24 @@ public class SlicingRefiner implements Refiner, StatisticsProvider {
   private boolean counterexampleCheckOnSlice = false;
 
   @Option(
-    secure = true,
-    description =
-        "Use all assumptions of a target path as counterexamples, not just the edge to the target"
-            + " location. Always set this to `true` if you use SlicingDelegatingRefiner."
-  )
-  private boolean takeEagerSlice = true;
+      secure = true,
+      description =
+          "Use all assumptions of a target path as slicing criteria, not just the edge to the target"
+              + " location.")
+  private boolean takeEagerSlice = false;
+
+  @Option(
+      secure = true,
+      description =
+          "Add all assumptions of an infeasible target path to the slice, in addition"
+              + " to the original slice")
+  private boolean addCexConstraintsToSlice = true;
 
   @Option(secure = true, description = "What kind of restart to do after a successful refinement")
   private RestartStrategy restartStrategy = RestartStrategy.PIVOT;
+
+  private Slicer slicer;
+  private CFA cfa;
 
   private enum RestartStrategy {
     /**
@@ -125,7 +127,6 @@ public class SlicingRefiner implements Refiner, StatisticsProvider {
 
   private final PathExtractor pathExtractor;
   private final ARGCPA argCpa;
-  private final DependenceGraph depGraph;
 
   private final TransferRelation transfer;
   private final WrapperPrecision currentPrecision;
@@ -135,10 +136,6 @@ public class SlicingRefiner implements Refiner, StatisticsProvider {
   private Set<Integer> previousTargetPaths = new HashSet<>();
 
   private int refinementCount = 0;
-  private StatInt candidateSliceCount =
-      new StatInt(StatKind.SUM, "Number of proposed slicing " + "procedures");
-  private StatInt sliceCount = new StatInt(StatKind.SUM, "Number of slicing procedures");
-  private StatTimer slicingTime = new StatTimer(StatKind.SUM, "Time needed for slicing");
 
   public static SlicingRefiner create(final ConfigurableProgramAnalysis pCpa)
       throws InvalidConfigurationException {
@@ -177,12 +174,22 @@ public class SlicingRefiner implements Refiner, StatisticsProvider {
         compositePrecision.replaceWrappedPrecision(
             fullSlicingPrecision, Predicates.instanceOf(SlicingPrecision.class));
 
+    ShutdownNotifier shutdownNotifier = slicingCPA.getShutdownNotifier();
+    Slicer slicer =
+        new StaticSlicer(
+            logger,
+            shutdownNotifier,
+            config,
+            cfa.getDependenceGraph()
+                .orElseThrow(
+                    () ->
+                        new InvalidConfigurationException("Dependence graph of CFA " + "missing")));
+
     return new SlicingRefiner(
         pathExtractor,
         argCpa,
-        cfa.getDependenceGraph()
-            .orElseThrow(
-                () -> new InvalidConfigurationException("Dependence graph of CFA " + "missing")),
+        slicer,
+        cfa,
         transferRelation,
         initialCompositeState,
         compositePrecision,
@@ -193,7 +200,8 @@ public class SlicingRefiner implements Refiner, StatisticsProvider {
   private SlicingRefiner(
       final PathExtractor pPathExtractor,
       final ARGCPA pArgCpa,
-      final DependenceGraph pDepGraph,
+      final Slicer pSlicer,
+      final CFA pCfa,
       final TransferRelation pTransferRelation,
       final AbstractState pInitialState,
       final WrapperPrecision pCurrentArgPrecision,
@@ -203,7 +211,8 @@ public class SlicingRefiner implements Refiner, StatisticsProvider {
     pConfig.inject(this);
     pathExtractor = pPathExtractor;
     argCpa = pArgCpa;
-    depGraph = pDepGraph;
+    slicer = pSlicer;
+    cfa = pCfa;
     currentPrecision = pCurrentArgPrecision;
     fullPrecision = pFullPrecision;
     transfer = pTransferRelation;
@@ -352,45 +361,32 @@ public class SlicingRefiner implements Refiner, StatisticsProvider {
   }
 
   private Set<CFAEdge> getSlice(ARGPath pPath) throws InterruptedException {
-    int candidateSlices = 0;
-    int realSlices = 0;
-    try {
-      Set<CFAEdge> relevantEdges = new HashSet<>();
-      List<CFAEdge> innerEdges = pPath.getInnerEdges();
-      List<CFAEdge> criteriaEdges = new ArrayList<>(1);
+    List<CFAEdge> innerEdges = pPath.getInnerEdges();
 
-      if (takeEagerSlice) {
-        criteriaEdges =
-            innerEdges
-                .stream()
-                .filter(Predicates.instanceOf(CAssumeEdge.class))
-                .collect(Collectors.toList());
-      }
-      CFANode finalNode = AbstractStates.extractLocation(pPath.getLastState());
-      List<CFAEdge> edgesToTarget =
-          CFAUtils.enteringEdges(finalNode).filter(innerEdges::contains).toList();
-      criteriaEdges.addAll(edgesToTarget);
+    List<CFAEdge> cexConstraints =
+        innerEdges
+            .stream()
+            .filter(Predicates.instanceOf(CAssumeEdge.class))
+            .collect(Collectors.toList());
 
-      // Heuristic: Reverse to make states that are deeper in the path first - these
-      // have a higher chance of including earlier states in their dependences
-      criteriaEdges = Lists.reverse(criteriaEdges);
-
-      for (CFAEdge e : criteriaEdges) {
-        candidateSlices++;
-        // If the relevant edges contain e, then all dependences of e are also already included
-        // and we can skip it (this is only true as long as no function call/return edge is a
-        // criterion!)
-        if (!relevantEdges.contains(e)) {
-          realSlices++;
-          Collection<CFAEdge> slice = getSlice(e);
-          relevantEdges.addAll(slice);
-        }
-      }
-      return relevantEdges;
-    } finally {
-      candidateSliceCount.setNextValue(candidateSlices);
-      sliceCount.setNextValue(realSlices);
+    List<CFAEdge> criteriaEdges = new ArrayList<>(1);
+    if (takeEagerSlice) {
+      criteriaEdges = cexConstraints;
     }
+    CFANode finalNode = AbstractStates.extractLocation(pPath.getLastState());
+    List<CFAEdge> edgesToTarget =
+        CFAUtils.enteringEdges(finalNode).filter(innerEdges::contains).toList();
+    criteriaEdges.addAll(edgesToTarget);
+
+    Set<CFAEdge> relevantEdges = slicer.getRelevantEdges(cfa, criteriaEdges);
+
+    if (addCexConstraintsToSlice) {
+      // this must always be added _after_ adding the slices, otherwise
+      // slices may be incomplete
+      relevantEdges.addAll(cexConstraints);
+    }
+
+    return relevantEdges;
   }
 
   private SlicingPrecision mergeOnSubgraph(
@@ -423,16 +419,6 @@ public class SlicingRefiner implements Refiner, StatisticsProvider {
     }
   }
 
-  /** Returns the program slice for the given {@link ARGState} as slicing criterion. */
-  Collection<CFAEdge> getSlice(final CFAEdge pCriterion) throws InterruptedException {
-    try {
-      slicingTime.start();
-      return depGraph.getReachable(pCriterion, TraversalDirection.BACKWARD);
-    } finally {
-      slicingTime.stop();
-    }
-  }
-
   private ARGState getRefinementRoot(final ARGPath pPath, final Collection<CFAEdge> relevantEdges) {
     switch (restartStrategy) {
       case PIVOT:
@@ -462,22 +448,9 @@ public class SlicingRefiner implements Refiner, StatisticsProvider {
   }
 
   @Override
-  public void collectStatistics(Collection<Statistics> statsCollection) {
-    statsCollection.add(
-        new Statistics() {
-
-          @Override
-          public void printStatistics(
-              final PrintStream pOut, final Result pResult, final UnmodifiableReachedSet pReached) {
-
-            StatisticsWriter writer = StatisticsWriter.writingStatisticsTo(pOut);
-            writer.put(candidateSliceCount).put(sliceCount).put(slicingTime);
-          }
-
-          @Override
-          public String getName() {
-            return SlicingRefiner.class.getSimpleName();
-          }
-        });
+  public void collectStatistics(Collection<Statistics> pStatsCollection) {
+    if (slicer instanceof StatisticsProvider) {
+      ((StatisticsProvider) slicer).collectStatistics(pStatsCollection);
+    }
   }
 }
